--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "build": "parcel build index.html"
   },
   "dependencies": {
-    "@babel/plugin-proposal-class-properties": "7.4.0",
     "@material-ui/core": "3.9.3",
     "@material-ui/icons": "3.0.2",
     "react": "16.8.3",
@@ -17,7 +16,8 @@
   },
   "devDependencies": {
     "@babel/core": "7.2.0",
-    "parcel-bundler": "^1.6.1"
+    "parcel-bundler": "^1.6.1",
+    "@babel/plugin-proposal-class-properties": "7.4.0"
   },
   "keywords": []
 }
