--- a/package.json
+++ b/package.json
@@ -5,19 +5,21 @@
   "main": "index.html",
   "scripts": {
     "start": "parcel index.html --open",
-    "build": "parcel build index.html"
+    "build": "parcel build index.html && cp config.json ./dist"
   },
   "dependencies": {
     "@material-ui/core": "3.9.3",
     "@material-ui/icons": "3.0.2",
-    "react": "16.8.3",
-    "react-dom": "16.8.3",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-react": "6.24.1",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
     "react-scripts": "2.1.8"
   },
   "devDependencies": {
-    "@babel/core": "7.2.0",
-    "parcel-bundler": "^1.6.1",
-    "@babel/plugin-proposal-class-properties": "7.4.0"
+    "@babel/core": "7.4.0",
+    "@babel/plugin-proposal-class-properties": "7.4.0",
+    "parcel-bundler": "^1.12.3"
   },
   "keywords": []
 }
