--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ script:
 deploy:
   provider: surge
   project: ./dist/
-  domain: recaptchav3.surge.sh
+  domain: https://recaptchav3.surge.sh
   skip_cleanup: true
 on:
     branch: master
